force-app/main/default/src/objects/HealthCloudGA__CarePlanProblem__c/HealthCloudGA__CarePlanProblem__c.object-meta.xml
<CustomObject>
    <description>Patients heath issue to be addressed by a care plan</description>
    <label>Problem</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Problems</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>