force-app/main/default/src/objects/HealthCloudGA__CarePlanProblem__c/fields/HealthCloudGA__CarePlan__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CarePlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Care plan this problem is a part of</description>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Problems</relationshipLabel>
    <relationshipName>CarePlanProblems</relationshipName>
    <type>Lookup</type>
</CustomField>