force-app/main/default/src/objects/HealthCloudGA__CarePlanProblem__c/fields/HealthCloudGA__CarePlanTemplate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CarePlanTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Plan Template</label>
    <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
    <relationshipLabel>Problems</relationshipLabel>
    <relationshipName>Problems</relationshipName>
    <type>Lookup</type>
</CustomField>