force-app/main/default/src/objects/HealthCloudGA__CarePlanProblem__c/fields/PJN_CarePlan_Path_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_CarePlan_Path_Status__c</fullName>
    <formula>CASE(
    TEXT(PJN_Status__c), 
    &apos;Planned&apos;, &apos;incomplete&apos;, 
    &apos;Open&apos;, &apos;current&apos;,
    &apos;Cancelled&apos;, &apos;complete&apos;,
    &apos;Closed&apos;, &apos;complete&apos;,
    &apos;incomplete&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CarePlan Path Status</label>
    <type>Text</type>
</CustomField>