force-app/main/default/src/objects/HealthCloudGA__CarePlanProblem__c/fields/PJN_Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Closed__c</fullName>
    <description>Date the care plan stage was closed or skipped.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>