force-app/main/default/src/objects/HealthCloudGA__CarePlanProblem__c/fields/PJN_Date_Started__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Started__c</fullName>
    <description>Date the care plan stage was started.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Started</label>
    <type>Date</type>
</CustomField>