force-app/main/default/src/objects/HealthCloudGA__CarePlanProblem__c/fields/PJN_Days_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>PJN_Days_in_Stage__c</fullName>
    <description>Returns the number of days the care plan has been (or was) in this stage.</description>
    <formula>IF(
ISPICKVAL(PJN_Status__c, &quot;Planned&quot;),
0,
IF(
ISPICKVAL(PJN_Status__c, &quot;Open&quot;),
TODAY() - PJN_Date_Started__c + 1,
PJN_Date_Closed__c - PJN_Date_Started__c + 1
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>