force-app/main/default/src/objects/HealthCloudGA__CarePlanProblem__c/fields/PJN_Program_Problem_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program_Problem_DeveloperName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Problem DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>