force-app/main/default/src/objects/HealthCloudGA__CarePlanProblem__c/validationRules/MVN_Care_Plan_Coordinator_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>MVN_Care_Plan_Coordinator_Required</fullName>
    <active>true</active>
    <description>Requires the user to select a Coordinator on the patient&apos;s Care Plan so that the Coordinator can be set as the owner of the next activity in the program.</description>
    <errorConditionFormula>AND(
ISBLANK(HealthCloudGA__CarePlan__r.MVN_Coordinator__c),
ISCHANGED(PJN_Status__c),
ISPICKVAL(PJN_Status__c, &quot;Open&quot;),
OR(
PJN_Program_Problem_DeveloperName__c = &quot;MVN_EVK_PA_Stage&quot;,
PJN_Program_Problem_DeveloperName__c = &quot;MVN_EVK_PA_Appeal_Stage&quot;,
PJN_Program_Problem_DeveloperName__c = &quot;MVN_EVK_Insurance_Change_Stage&quot;,
PJN_Program_Problem_DeveloperName__c = &quot;MVN_EVK_Annual_Reauth_Stage&quot;,
PJN_Program_Problem_DeveloperName__c = &quot;MVN_EVK_Claim_Support_Stage&quot;)
)</errorConditionFormula>
    <errorMessage>A Coordinator must be selected for the patient&apos;s Care Plan to initiate this stage.</errorMessage>
</ValidationRule>